--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
     <head>
         <title>EngageOne&trade; Communicate Chat Web Client Example</title>
         <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
@@ -18,7 +18,7 @@
             chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
         });</script>
     </body>
-</html>
+</html> -->
 
 
 
@@ -26,7 +26,7 @@
 
 
 <!-- <head>
-  <!-- // video Script -->
+  // video Script
 <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,10 +41,10 @@
   <!-- // Video container -->
   <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
   
-<div id="eocv-player" data-project="62ed00313566b46bb5d9f085" data-region="us-east-1"></div>
+<!-- <div id="eocv-player" data-project="62ed00313566b46bb5d9f085" data-region="us-east-1"></div> -->
   <!-- // dodajemy w moecie testowania z QA -->
   <!-- <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div>  -->
-  <!-- <div id="eocv-player" data-project="67c5a9d460adffc8d7f3339e" data-region="eu-west-2"data-environment="qa"></div>> -->
+  <div id="eocv-player" data-project="68932c1449315cc4a50f7ae9" data-region="us-east-1" data-environment="qa"></div>
   <header id="header" class="clearfix">
     <div id="logo">
       <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
