--- a/pizzeria.html
+++ b/pizzeria.html
@@ -1,53 +1,17 @@
 <!DOCTYPE html>
-<!-- <html>
-    <head>
-        <title>EngageOne&trade; Communicate Chat Web Client Example</title>
-        <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; object-src 'self' blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; img-src 'self' data: http: https:; style-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.googleapis.com/; script-src 'self' 'unsafe-inline' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/; font-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://fonts.gstatic.com/; connect-src 'self' https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ https://*.s3.amazonaws.com/ blob: https://*.qa.engageonechat.com/ https://*.qa.us-east-1.engageonechat.com/ https://*.qa.eu-central-1.engageonechat.com/ wss://*.qa.engageonechat.com/ wss://*.qa.us-east-1.engageonechat.com/ wss://*.qa.eu-central-1.engageonechat.com/; frame-src 'self' http: https: blob:; media-src 'self'; base-uri 'self'; form-action 'self'"/>
-    </head>
-    <body>
-        <div id="chatcontainer" class="chat-container"></div>
-        <script src="https://webclient.qa.engageonechat.com/loader.min.js"></script>
-        <script>converseChatLoader({
-            host: "wss://chatws.qa.us-east-1.engageonechat.com",
-            converseHost: "https://chatrunner.qa.us-east-1.engageonechat.com",
-            serverUserImage: "https://webclient.dev2.engageonechat.com/eo-square-mark.png",
-            tenant: "sa340c2",
-            botId: "Kamil J,Rafalowy 2",
-            placeholder: "Type a message...",
-            chatBotBaseUrl: "https://webclient.qa.engageonechat.com"
-        });</script>
-    </body>
-</html> -->
+<html lang="pl">
 
-
-
-
-
-
-<!-- <head>
-  // video Script
-<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pizzeria</title>
   <link rel="stylesheet" href="pizzeria_style.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Poppins:ital,wght@0,300;0,500;1,300;1,700&family=Roboto&display=swap"
-    rel="stylesheet">
-  <title>Document</title>
-</head> -->
+</head>
 
 <body>
-  <!-- // Video container -->
-  <!-- // Przy testowaniu na qa trzeba dodac data-environment="qa" a na prodzie trzeba to usunac -->
-  
-<!-- <div id="eocv-player" data-project="62ed00313566b46bb5d9f085" data-region="us-east-1"></div> -->
-  <!-- // dodajemy w moecie testowania z QA -->
-  <!-- <div id="eocv-player" data-project="673b39f1b6e3ee16ca52b09f" data-region="us-east-1" data-environment="dev"></div>  -->
-  <div id="eocv-player" data-project="68932c1449315cc4a50f7ae9" data-region="us-east-1" data-environment="qa"></div>
   <header id="header" class="clearfix">
     <div id="logo">
-      <img width="61" px src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
+      <img width="61" src="https://cdn.pixabay.com/photo/2012/04/01/16/51/pizza-23477_960_720.png">
     </div>
     <nav class="menu">
       <ul>
@@ -61,14 +25,13 @@
     <div class="contact-info">
       <div class="tel">700007700</div>
     </div>
-<script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
   </header>
 
   <main>
     <div class="slider-box clearfix">
       <div class="slider-half-item">
         <article>
-          Najlepsza pizza w miescie
+          <h1>Najlepsza pizza w miescie</h1>
           <hr>
           <section class="butto-section">
             <a href="#" class="button order-button">Zamow z dostawa</a>
@@ -84,17 +47,17 @@
     <div class="advantages-box clearfix">
       <div class="advantages-one-third">
         <div class="column-advantage best-ingredients">
-          Najlepsze <br> skladniki
+          <h2>Najlepsze <br> skladniki</h2>
         </div>
       </div>
       <div class="advantages-one-third">
         <div class="column-advantage orginal-recipe">
-          Orginalna <br> receptura
+          <h2>Orginalna <br> receptura</h2>
         </div>
       </div>
       <div class="advantages-one-third">
         <div class="column-advantage fast-delivery">
-          Szybka <br> dostawa
+          <h2>Szybka <br> dostawa</h2>
         </div>
       </div>
     </div>
@@ -103,7 +66,7 @@
     <div class="kitchen-menu clearfix">
       <div class="menu-one-forth">
         <img src="https://cdn.pixabay.com/photo/2017/12/05/20/10/pizza-3000285_960_720.png" alt="">
-        Greek Pizza 22 zł
+        <h3>Greek Pizza 22 zł</h3>
         <article>
           <p>Klasyczny Pizza</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fugiat.</p>
@@ -111,7 +74,7 @@
       </div>
       <div class="menu-one-forth">
         <img src="https://cdn.pixabay.com/photo/2017/01/03/11/33/pizza-1949183__340.jpg" alt="">
-        Capricciosa Pizza 25 zł
+        <h3>Capricciosa Pizza 25 zł</h3>
         <article>
           <p>Klasyczny Pizza</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fugiat.</p>
@@ -119,7 +82,7 @@
       </div>
       <div class="menu-one-forth">
         <img src="https://cdn.pixabay.com/photo/2018/03/06/13/47/food-3203445_960_720.jpg" alt="">
-        Margherita Pizza 28 zł
+        <h3>Margherita Pizza 28 zł</h3>
         <article>
           <p>Klasyczny Pizza</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fugiat.</p>
@@ -127,7 +90,7 @@
       </div>
       <div class="menu-one-forth">
         <img src="https://cdn.pixabay.com/photo/2016/05/05/09/19/pizza-1373508_960_720.jpg" alt="">
-        Greek Pizza 22 zł
+        <h3>Greek Pizza 22 zł</h3>
         <article>
           <p>Klasyczny Pizza</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, fugiat.</p>
@@ -149,18 +112,17 @@
                     Greek Pizza 32 zł 
         -->
   </main>
-  <footer class="page-footer menu">
+  <footer class="page-footer">
     <ul>
-      <li><a href=""></a>Regulamin</li>
-      <li><a href=""></a>O nas</li>
-      <li><a href=""></a>Blog</li>
-      <li><a href=""></a>Kontakt</li>
+      <li><a href="">Regulamin</a></li>
+      <li><a href="">O nas</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Kontakt</a></li>
     </ul>
   </footer>
 
-
+  <script async defer src="https://embed.engageone.video/latest/playerPlugin.js"></script>
 
 </body>
-
 
 </html>
